--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -8,9 +8,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <div class="navbar-brand" href="#">
-                <a href="#" ui-sref="dashboard" ng-if="hdrctr.hdrvars.authenticated">
-                    <img src="ddb/assets/img/logo.png" style="height: 30px" ng-click="collapse()"/>
+            <div class="navbar-brand" href="#" ng-click="collapse()" ui-sref="dashboard">
+                <a href="#" ng-if="hdrctr.hdrvars.authenticated">
+                    <img src="ddb/assets/img/logo.png" style="height: 30px"/>
                 </a>
             </div>
         </div>
